--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 }
 
 html {
- overflow:smooth;
+  scroll-behavior: smooth;
 }
 
 /* Global Styles */
@@ -194,7 +194,7 @@ color: aliceblue;
   padding: 40px 20px 20px 20px;
   border-radius: 5px;
   align-items: center;
-  overflow-x: hidden;
+  overflow: hidden;
   font-size: 18px;
   
   
@@ -219,7 +219,7 @@ color: aliceblue;
   right: 0.5%;
   width: 320px;
   max-height: 0px;
-  overflow-x: hidden;
+  overflow: hidden;
   transition: max-height 0.5s;
   
 
@@ -464,7 +464,7 @@ color: aliceblue;
   margin: auto;
   margin-bottom: 120px;
   text-align: center;
-  overflow-x:hidden;
+  overflow: none;
 }
 
 
