--- a/style.css
+++ b/style.css
@@ -194,7 +194,7 @@ color: aliceblue;
   padding: 40px 20px 20px 20px;
   border-radius: 5px;
   align-items: center;
-  overflow: hidden;
+  overflow-x: hidden;
   font-size: 18px;
   
   
